k3s_manifests/nodePort-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeportnginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      nodePort: 30007
