k3s_manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-nginx-ingress
  annotations:
    #app.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: nlulootask4.gleeze.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodeportnginx
              port:
                number: 80
